# nn_5th_sem

extra-tasks/: pyproject.toml  vectors.ipynb
lab1/: pyproject.toml
lab1/src/: task1.py  task2.py
lab2/: pyproject.toml
lab2/src/: main.py  perceptron.py
lab3/: pyproject.toml
lab3/src/: main.py  network.py  neuron.py
lab4/: pyproject.toml
lab4/src/: main.py
lab5/: pyproject.toml  requirements.txt
lab5/src/: lab5.ipynb
